Fix select and tooltip z-index

--- a/src/styles/tippy.css
+++ b/src/styles/tippy.css
@@ -59,5 +59,5 @@
   border-style: solid;
 }
 .tippy-content {
-  @apply relative z-10 px-6 py-4;
+  @apply relative px-6 py-4;
 }
